tests/solidity-semantic-tests/out/errors/panic_via_import/C.approval.teal
#pragma version 10
#pragma typetrack false

// /tmp/multisource_r7ovc1ds/s2.sol.C.approval_program() -> uint64:
main:
    txn ApplicationID
    bnz main_after_if_else@2
    pushint 1
    return

main_after_if_else@2:
    pushint 4096
    bzero
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0x1e7aad1c 0x3ac90b08 // method "a()void", method "b()void"
    txna ApplicationArgs 0
    match main_a_route@5 main_b_route@6
    err

main_b_route@6:
    err // E

main_a_route@5:
    err // Panic
